# dev-launch

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.serena/: project.yml
.serena/memories/: devlaunch-overview.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/research/: claude-token-monitoring.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  git.rs  lib.rs  main.rs  process.rs  system.rs  webhook_server.rs
src/components/: DirectoryPicker.tsx  GitStatusBadge.tsx  LogViewer.tsx  MultiLogViewer.tsx  NetworkTab.tsx  PortMonitor.tsx  PreferencesModal.tsx  PresetBar.tsx  ProjectCard.tsx  ProjectListItem.tsx  QuitDialog.tsx  SystemMonitor.tsx  SystemStats.tsx  SystemStatsModal.tsx  WebhookReceiver.tsx
src/components/ui/: badge.tsx  card.tsx
src/hooks/: useConfig.ts  useGitStatus.ts  useLogStream.ts  useSettings.ts  useUrlStream.ts
src/lib/: scanner.ts
src/stores/: app-store.ts
src/types/: project.ts
